cif/org.eclipse.escet.cif.tests/tests/checks/EventOnlyReqSubsetPlantAlphabetCheck.cif.check.err
WARNING: File "checks/EventOnlyReqSubsetPlantAlphabetCheck.cif": Semantic warning at line 23, column 16: The alphabet of automaton "p2" globally disables event "e2", as the event is not used on any of the edges of the automaton.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  --------------------------------------------------------------------------
  (1/1) Event is in the requirement alphabet, but not in the plant alphabet.
  --------------------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e3;
             ^
     - event e4;
             ^
